<resources>
    <string name="app_name">VideoShop</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="e_mail">E-mail</string>
    <string name="password_8_20">Password (8-20)</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register_account">Register account</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="information_divider">&#160;|&#160;</string>
</resources>
